# vglang

./: Cargo.toml  LICENSE  README.md  TODO.md  build.rs  vglang.ml
.github/workflows/: ci.yaml
benches/: svg_parse.rs
spec/: cubic_01.json
spec/compositing/: mask_01.json  opacity_01.json
spec/filter/: enable_background_01.json  fe_component_transfer_01.json  feblend_01.json  fecolormatrix_01.json  fecolormatrix_01.vgb
spec/gradients/: lingrad_01.json  radgrad_01.json
spec/path/: arcs_01.json  arcs_01.vgb  cubic_01.json  cubic_01.vgb  quad_01.json  quad_01.vgb  triangle_01.json
spec/pattern/: pattern_01.json
spec/shapes/: ellipse_01.json  line_01.json  polygon_01.json  polyline_01.json  rect_01.json  rect_02.json
spec/text/: rtl_text.json  text_0_1.json  text_decoration_01.json  toap_01.json  toap_01.vgb  tspan_0_1.json  tspan_0_2.json  tspan_0_3.json  tspan_0_4.json  tspan_0_5.json
src/: lib.rs
src/binary/: keyword.rs  mod.rs  reader.rs  writer.rs
src/ml/: mod.rs  opcode.rs  serde.rs
src/svg/: mod.rs
src/svg/parse/: angle.rs  background.rs  errors.rs  font.rs  iri.rs  length.rs  mod.rs  number.rs  paint.rs  path.rs  point.rs  sep.rs  transform.rs  variant.rs  viewbox.rs
src/svg/reader/: error.rs  mod.rs  reader.rs  state.rs  writer.rs
src/svg/writer/: error.rs  mod.rs  state.rs  writer.rs
tests/: spec.rs
