[package]
description = "Fast and simple vector graphics programming language and svg-compatible high-level virtual machine."
documentation = "https://docs.rs/vglang"
edition = "2024"
license = "MIT"
name = "vglang"
repository = "https://github.com/styles-lab/vglang"
version = "0.1.5"

[dependencies]
thiserror = {version = "^2.0"}

bytes = {version = "1.10.0", optional = true}
heck = {version = "^0.5", optional = true}
log = {version = "^0.4", features = ["kv"], optional = true}
mlang-rs = {version = "^0.2", features = ["rt", "rt_serde"]}
parserc = {version = "^0.4", optional = true}
serde = {version = "^1.0", features = ["derive"], optional = true}
xml_dom = {version = "^0.2", optional = true}

[dev-dependencies]
divan = {version = "^0.1"}
pretty_env_logger = {version = "^0.5"}
serde_json = {version = "^1"}

[build-dependencies]
mlang-rs = {version = "^0.2", features = ["lang"]}

[features]
default = ["serde", "svg", "binary"]

binary = ["bytes"]
serde = ["dep:serde", "parserc/serde", "mlang-rs/serde"]
svg = ["xml_dom", "heck", "log"]

[[bench]]
harness = false
name = "svg_parse"
